# tictok_clone-drf-backend

./: pyproject.toml
commons/: models.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_userfollow_user_following.py  0003_alter_user_avatar.py  0004_alter_user_avatar.py
videos/: admin.py  models.py
videos/migrations/: 0001_initial.py  0002_alter_video_thumbnail.py  0003_video_comments.py  0004_remove_video_comments_comment_video_comments.py
